ksmserver: restore support for autostart scripts; migrate them from the KDE4 dir

Commit f913e251fe6 removed this, due to a porting bug: both klauncher
(XDG autostart using .desktop files) and ksmserver (kde-specific scripts)
were ported to look at the same directory (~/.config/autostart),
leading to double autostart. The right fix, however, is to use
a different directory for scripts, I called it ~/.config/autostart-scripts.

BUG: 338242
REVIEW: 124534